add fallback mode and linkedin preview

--- a/index.html
+++ b/index.html
@@ -2,10 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- ✅ Favicon -->
+    <link rel="icon" type="image/png" href="/og.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+
+    <!-- ✅ Title -->
+    <title>Sachini Weerasuria | Portfolio</title>
+
+    <!-- ✅ SEO -->
+    <meta name="description" content="Full-stack Software Engineering portfolio: Projects, Skills, Certifications, and Contact." />
+
+    <!-- ✅ Open Graph (LinkedIn Preview) -->
+    <meta property="og:title" content="Sachini Weerasuria | Portfolio" />
+    <meta property="og:description" content="Full-stack projects, skills, certifications, and achievements. View my work and contact me." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://YOUR-VERCEL-URL.vercel.app" />
+    <meta property="og:image" content="https://YOUR-VERCEL-URL.vercel.app/og.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- ✅ Twitter (also helps) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Sachini Weerasuria | Portfolio" />
+    <meta name="twitter:description" content="Full-stack projects, skills, certifications, and achievements." />
+    <meta name="twitter:image" content="https://YOUR-VERCEL-URL.vercel.app/og.png" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
