changes name to adheesha

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- ✅ Title -->
-    <title>Sachini Weerasuria | Portfolio</title>
+    <title>Adheesha Weerasuria | Portfolio</title>
 
     <!-- ✅ SEO -->
     <meta name="description" content="Full-stack Software Engineering portfolio: Projects, Skills, Certifications, and Contact." />
