all changed to adheesha

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="description" content="Full-stack Software Engineering portfolio: Projects, Skills, Certifications, and Contact." />
 
     <!-- ✅ Open Graph (LinkedIn Preview) -->
-    <meta property="og:title" content="Sachini Weerasuria | Portfolio" />
+    <meta property="og:title" content="Adheesha Weerasuria | Portfolio" />
     <meta property="og:description" content="Full-stack projects, skills, certifications, and achievements. View my work and contact me." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://YOUR-VERCEL-URL.vercel.app" />
@@ -25,7 +25,7 @@
 
     <!-- ✅ Twitter (also helps) -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Sachini Weerasuria | Portfolio" />
+    <meta name="twitter:title" content="Adheesha Weerasuria | Portfolio" />
     <meta name="twitter:description" content="Full-stack projects, skills, certifications, and achievements." />
     <meta name="twitter:image" content="https://YOUR-VERCEL-URL.vercel.app/og.png" />
   </head>
